--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mateuszcer.basket</groupId>
-    <artifactId>basket</artifactId>
+    <artifactId>basket-splitter</artifactId>
     <version>1.0</version>
 
-    <name>basket</name>
+    <name>basket-splitter</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
